--- a/index.html
+++ b/index.html
@@ -1,109 +1,139 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fizo — Discord Bot Designer</title>
-  <style>
-    :root{--bg:#0f1724;--accent:#3cb995;--muted:#3cb995;}
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0;background:linear-gradient(180deg,#071027 0%, #071826 100%);font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial; color:var(--accent)}
-    .wrap{max-width:980px;margin:6vh auto;padding:28px;background:rgba(255,255,255,0.02);border-radius:12px;box-shadow:0 6px 30px rgba(2,6,23,0.6)}
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Fizo | Discord Bot Designer</title>
+<style>
+/* ======= General Styles ======= */
+body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; color:#a5f3fc; line-height:1.6; scroll-behavior:smooth; } /* text color changed to light cyan like Zer0Access.dev */
+a { color:#22d3ee; text-decoration:none; }
+a:hover { text-decoration:underline; }
+h1,h2,h3,h4,h5 { color:#22d3ee; }
+nav { position:fixed; top:0; width:100%; height:60px; background:#111; display:flex; justify-content:center; align-items:center; z-index:1000; }
+nav a { margin:0 18px; font-weight:700; }
+section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
+.lead { max-width:880px; margin:0 auto 20px; color:#a5f3fc; font-size:1.05rem; }
+.card-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px; }
+.card { background:#111; border-radius:12px; padding:20px; width:300px; text-align:left; border:1px solid #22d3ee; }
+.review-container { display:flex; justify-content:center; gap:20px; margin-top:30px; flex-wrap:wrap; }
+.review-card { background:#111; border-radius:12px; padding:20px; width:280px; color:#a5f3fc; font-size:0.95rem; border:1px solid #22d3ee; }
+.review-card strong { display:block; margin-top:10px; color:#22d3ee; }
+.stars { color:#facc15; font-size:1rem; margin-bottom:6px; }
+.btn { display:inline-block; padding:12px 20px; border-radius:8px; border:2px solid #22d3ee; color:#22d3ee; background:transparent; font-weight:700; cursor:pointer; text-decoration:none; }
+.btn.primary { background:#22d3ee; color:#111; border-color:#22d3ee; }
 
-    nav{display:flex;gap:18px;align-items:center;margin-bottom:18px}
-    nav a{color:var(--muted);text-decoration:none;font-size:14px}
-    nav .brand{font-weight:700;color:#fff;font-size:18px}
+/* Hero Typing Animation */
+#typed-text { font-weight:700; font-size:1.5rem; color:#22d3ee; }
+#cursor { font-weight:700; font-size:1.5rem; color:#22d3ee; }
 
-    header{display:flex;flex-direction:row;align-items:center;gap:24px}
-    .hero-left{flex:1}
-    h1{font-size:48px;line-height:1;margin:6px 0}
-    .typewrap{display:inline-block;position:relative;padding-right:6px}
-    .cursor{display:inline-block;width:2px;background:var(--accent);height:1.05em;vertical-align:middle;margin-left:6px;animation:blink 1s steps(2,end) infinite}
-    @keyframes blink{50%{opacity:0}}
-
-    p.lead{color:var(--muted);margin:10px 0 22px;font-size:16px}
-
-    .cards{display:flex;gap:14px;flex-wrap:wrap}
-    .card{background:rgba(255,255,255,0.02);padding:14px;border-radius:10px;min-width:180px}
-
-    footer{margin-top:20px;color:var(--muted);font-size:13px}
-
-    @media (max-width:680px){h1{font-size:36px}.wrap{margin:4vh 12px}}
-  </style>
+@media(max-width:820px){ .card-container, .review-container{flex-direction:column; align-items:center;} }
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <nav>
-      <div class="brand">Fizo</div>
-      <a href="#">Portfolio</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
 
-    <header>
-      <div class="hero-left">
-        <h1 aria-label="Fizo — Discord Bot Designer">
-          <span class="typewrap" id="type-target"></span>
-          <span class="cursor" aria-hidden="true"></span>
-        </h1>
-        <p class="lead">I build production-quality Discord bots — moderation, automation, music, economy systems and more.</p>
+<!-- Navigation -->
+<nav>
+<a href="#hero">Home</a>
+<a href="#portfolio">Portfolio</a>
+<a href="#about">About</a>
+<a href="#reviews">Reviews</a>
+<a href="#contact">Contact</a>
+</nav>
 
-        <div class="cards">
-          <div class="card"><strong>Custom Bots</strong><div style="color:var(--muted);font-size:13px">Moderation, tickets, economy</div></div>
-          <div class="card"><strong>Automation</strong><div style="color:var(--muted);font-size:13px">Welcome messages, role assignment</div></div>
-          <div class="card"><strong>Support</strong><div style="color:var(--muted);font-size:13px">Docs & long-term maintenance</div></div>
-        </div>
-      </div>
-    </header>
+<!-- Hero -->
+<section id="hero">
+<h1>Fizo</h1>
+<div class="tag">
+  <span id="typed-text"></span><span id="cursor">|</span>
+</div>
+<p style="margin-top:16px;">
+  <a href="https://discord.gg/ePe234Hjpz" class="btn primary" target="_blank">Contact Me on Discord</a>
+</p>
+</section>
 
-    <footer id="contact">Email: lazul@fizo.uk • Contact me on Discord</footer>
-  </div>
+<!-- Portfolio -->
+<section id="portfolio">
+<h2>What I Do</h2>
+<div class="card-container">
+<div class="card">
+<h3>Custom Discord Bots</h3>
+<p>Create moderation, ticketing, music, economy, and automation bots tailored to your server.</p>
+</div>
+<div class="card">
+<h3>Server Automation</h3>
+<p>Automate repetitive tasks, welcome messages, role assignments, leveling, and engagement systems.</p>
+</div>
+<div class="card">
+<h3>Bot Management</h3>
+<p>Reliable, production-quality bots with clear documentation and long-term support.</p>
+</div>
+</div>
+</section>
 
-  <script>
-    // Typing animation
-    (function(){
-      const target = document.getElementById('type-target');
-      const phrases = [
-        'Fizo',
-        'Fizo — Discord Bot Designer',
-        'Custom Discord bots • Automation • Support'
-      ];
+<!-- About -->
+<section id="about">
+<h2>About Me</h2>
+<p class="lead">I build production-quality Discord bots using JavaScript and Node.js, focusing on maintainable code and clear documentation. Over 75+ bots delivered so far.</p>
+</section>
 
-      const TYPE_SPEED = 70;
-      const DELETE_SPEED = 40;
-      const PAUSE_AFTER = 1400;
+<!-- Reviews -->
+<section id="reviews">
+<h2>Reviews</h2>
+<div class="review-container">
+<div class="review-card">
+<div class="stars">★★★★★</div>
+<p>"Fizo made a custom bot for my server that automates all moderation. Excellent work!"</p>
+<strong>- John</strong>
+</div>
+<div class="review-card">
+<div class="stars">★★★★★</div>
+<p>"The bot is reliable, fast, and exactly what we needed. Highly recommend!"</p>
+<strong>- Icy</strong>
+</div>
+<div class="review-card">
+<div class="stars">★★★★☆</div>
+<p>"75+ bots done, and ours was perfect. Great communication and support."</p>
+<strong>- David</strong>
+</div>
+</div>
+</section>
 
-      let phraseIndex = 0;
-      let charIndex = 0;
-      let mode = 'typing';
+<!-- Contact -->
+<section id="contact">
+<h2>Contact</h2>
+<p class="lead">Email: <a href="mailto:lazul@fizo.uk">lazul@fizo.uk</a></p>
+<p style="margin-top:16px;">
+  <a href="https://discord.gg/ePe234Hjpz" target="_blank" class="btn primary">Contact Me on Discord to Order</a>
+</p>
+</section>
 
-      function tick(){
-        const current = phrases[phraseIndex];
-        if(mode === 'typing'){
-          charIndex++;
-          target.textContent = current.slice(0,charIndex);
-          if(charIndex === current.length){
-            mode = 'paused';
-            setTimeout(()=>{ mode = 'deleting'; tick(); }, PAUSE_AFTER);
-            return;
-          }
-          setTimeout(tick, TYPE_SPEED + Math.random()*40);
-        } else if(mode === 'deleting'){
-          charIndex--;
-          target.textContent = current.slice(0,charIndex);
-          if(charIndex === 0){
-            phraseIndex = (phraseIndex + 1) % phrases.length;
-            mode = 'typing';
-            setTimeout(tick, 220);
-            return;
-          }
-          setTimeout(tick, DELETE_SPEED + Math.random()*30);
-        }
-      }
+<!-- Typing Animation Script -->
+<script>
+const texts = ["Discord Developer", "JavaScript Developer", "Bot Designer"];
+let count = 0, index = 0, currentText = '', isDeleting = false;
+const speed = 120, pause = 1500;
 
-      tick();
-    })();
-  </script>
+function type() {
+  const target = document.getElementById('typed-text');
+  if (!isDeleting) {
+    currentText = texts[count].substring(0, index + 1);
+    index++;
+    target.textContent = currentText;
+    if (index === texts[count].length) { isDeleting = true; setTimeout(type, pause); return; }
+  } else {
+    currentText = texts[count].substring(0, index - 1);
+    index--;
+    target.textContent = currentText;
+    if (index === 0) { isDeleting = false; count = (count + 1) % texts.length; }
+  }
+  setTimeout(type, speed);
+}
+document.addEventListener("DOMContentLoaded", type);
+
+const cursor = document.getElementById('cursor');
+setInterval(()=>{ cursor.style.opacity = cursor.style.opacity==='0'?'1':'0'; }, 500);
+</script>
+
 </body>
 </html>
